--- a/Softplan.API/appsettings.Development.json
+++ b/Softplan.API/appsettings.Development.json
@@ -8,8 +8,6 @@
   },
   "AppSettings": {
     "Key": "d170305cc0e3c3c7704ecae447579724d7134c14",
-    "Expires": 2,
-    "Issuer": "SCA",
-    "Audience": "https://localhost"
+    "Expires": 2
   }
 }
