--- a/Softplan.Repository/Softplan.Repository.csproj
+++ b/Softplan.Repository/Softplan.Repository.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Softplan.Model\Softplan.Model.csproj" />
+    <ProjectReference Include="..\Softplan.Model\Softplan.Domain.csproj" />
   </ItemGroup>
 
 </Project>
