Alteração de estrutura do projeto devido ao tempo para finalização do projeto

--- a/Softplan.API/Softplan.API.csproj
+++ b/Softplan.API/Softplan.API.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Softplan.Infra\Softplan.Infra.csproj" />
+    <ProjectReference Include="..\Softplan.Model\Softplan.Domain.csproj" />
     <ProjectReference Include="..\Softplan.Utils\Softplan.Utils.csproj" />
   </ItemGroup>
 
