--- a/Softplan.API/Properties/launchSettings.json
+++ b/Softplan.API/Properties/launchSettings.json
@@ -34,7 +34,8 @@
       "environmentVariables": {
         "apiToken": "d170305cc0e3c3c7704ecae447579724d7134c14",
         "connectionString": "Server=.\\\\SQLEXPRESS;Database=SoftplanDatabase;User Id=application;Password=password;MultipleActiveResultSets=true;",
-        "graphApi": "https://countries-274616.ew.r.appspot.com"
+        "graphApi": "https://countries-274616.ew.r.appspot.com",
+        "gitProject": "Value"
       },
       "publishAllPorts": true,
       "useSSL": true
