--- a/Softplan.Model/Softplan.Domain.csproj
+++ b/Softplan.Model/Softplan.Domain.csproj
@@ -7,9 +7,17 @@
   <ItemGroup>
     <PackageReference Include="GraphQL.Client" Version="3.2.2" />
     <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="3.2.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Implementation\" />
+    <Folder Include="Interfaces\" />
     <Folder Include="Request\" />
   </ItemGroup>
 
