--- a/Softplan.Repository/Softplan.Repository.csproj
+++ b/Softplan.Repository/Softplan.Repository.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Softplan.Infra\Softplan.Infra.csproj" />
     <ProjectReference Include="..\Softplan.Model\Softplan.Domain.csproj" />
   </ItemGroup>
 
