--- a/Softplan.API/Properties/launchSettings.json
+++ b/Softplan.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "https://localhost:44397/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -33,9 +33,8 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
         "apiToken": "d170305cc0e3c3c7704ecae447579724d7134c14",
-        "connectionString": "Server=.\\\\SQLEXPRESS;Database=SoftplanDatabase;User Id=application;Password=password;MultipleActiveResultSets=true;",
         "graphApi": "https://countries-274616.ew.r.appspot.com",
-        "gitProject": "Value"
+        "gitProject": "https://github.com/sergioluizom/SCA"
       },
       "publishAllPorts": true,
       "useSSL": true
