--- a/Softplan.API/appsettings.json
+++ b/Softplan.API/appsettings.json
@@ -5,6 +5,22 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }, 
-  "AllowedHosts": "*"
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "database": "Server=tcp:softplanteste.database.windows.net,1433;Initial Catalog=Softplanteste;Persist Security Info=False;User ID=usersoftplan;Password=Test3#Soft;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "AppSettings": {
+    "Key": "d170305cc0e3c3c7704ecae447579724d7134c14",
+    "Expires": 2
+  },
+  "AzureAd": {
+    "ClientId": "4cc941f9-c661-4d9e-8a1a-ab8b5e9cabfc",
+    "Domain": "sergioluizomtestesoftplanou.onmicrosoft.com",
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "39eacefe-e8fe-43cc-a2a7-4cdc49191e96",
+    "CallbackPath": "/signin-oidc",
+    "AppIDURL": "https://sergioluizomtestesoftplanou.onmicrosoft.com/Softplan.API",
+    "ConfigView": "MVC"
+  }
 }
