--- a/Softplan.API/Dockerfile
+++ b/Softplan.API/Dockerfile
@@ -11,12 +11,12 @@ COPY ["Softplan.API.csproj", "Softplan.API/"]
 RUN dotnet restore "Softplan.API/Softplan.API.csproj"
 COPY . .
 WORKDIR "/src/Softplan.API"
-RUN dotnet build "Softplan.API.csproj" -c Release -o /app
+RUN dotnet build "Softplan.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Softplan.API.csproj" -c Release -o /app
+RUN dotnet publish "Softplan.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app .
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Softplan.API.dll"]
