ALterações de configurações swagger

--- a/Softplan.API/appsettings.json
+++ b/Softplan.API/appsettings.json
@@ -22,5 +22,7 @@
     "CallbackPath": "/signin-oidc",
     "AppIDURL": "https://sergioluizomtestesoftplanou.onmicrosoft.com/Softplan.API",
     "ConfigView": "MVC"
-  }
+  },
+  "apiToken": "d170305cc0e3c3c7704ecae447579724d7134c14",
+  "graphApi": "https://countries-274616.ew.r.appspot.com"
 }
