--- a/Softplan.API/Softplan.API.csproj
+++ b/Softplan.API/Softplan.API.csproj
@@ -6,6 +6,11 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
+	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
+	</PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.4">
@@ -19,6 +24,12 @@
   <ItemGroup>
     <ProjectReference Include="..\Softplan.Model\Softplan.Domain.csproj" />
     <ProjectReference Include="..\Softplan.Utils\Softplan.Utils.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Softplan.API.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
