--- a/Softplan.API/Dockerfile
+++ b/Softplan.API/Dockerfile
@@ -8,13 +8,15 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
 COPY ["Softplan.API.csproj", "Softplan.API/"]
+COPY ["Softplan.API.csproj", "Softplan.API/"]
+COPY ["Softplan.API.csproj", "Softplan.API/"]
 RUN dotnet restore "Softplan.API/Softplan.API.csproj"
 COPY . . 
 WORKDIR "/src/Softplan.API"
-RUN dotnet build "Softplan.API.csproj" -c Release -o /app
+RUN dotnet build "Softplan.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Softplan.API.csproj" -c Release -o /app
+RUN dotnet publish "Softplan.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
