Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,3 +34,9 @@ stages:
         archiveType: 'zip'
         archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
         replaceExistingArchive: true
+    - task: DownloadBuildArtifacts@0
+      inputs:
+          buildType: 'current'
+          downloadType: 'single'
+          artifactName: 'pacote'
+          downloadPath: '$(System.ArtifactsDirectory)'
