include new property

--- a/Softplan.API/appsettings.json
+++ b/Softplan.API/appsettings.json
@@ -24,5 +24,8 @@
     "ConfigView": "MVC"
   },
   "apiToken": "d170305cc0e3c3c7704ecae447579724d7134c14",
-  "graphApi": "https://countries-274616.ew.r.appspot.com"
+  "graphApi": "https://countries-274616.ew.r.appspot.com",
+  "gitProjectApi": "https://github.com/sergioluizom/Softplan",
+  "gitProjectFront": "https://github.com/sergioluizom/SoftplanFront"
+  
 }
